fix run error